--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
@@ -41,6 +42,7 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.8",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
