--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "description": "",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "open": "^8.0.7",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "axios-logger": "^2.5.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -50,6 +52,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^4.2.3",
     "webpack-dev-server": "^3.7.2",
     "workbox-webpack-plugin": "^6.1.5"
